@@ -32,6 +32,8 @@ static SPReprDoc *sp_repr_do_read (xmlDocPtr doc, const gchar *default_ns);
 static SPRepr *sp_repr_svg_read_node (xmlNodePtr node, const gchar *default_ns, GHashTable *prefix_map);
 static void sp_repr_set_xmlns_attr (const gchar *prefix, const gchar *uri, SPRepr *repr);
 static gint sp_repr_qualified_name (gchar *p, gint len, xmlNsPtr ns, const xmlChar *name, const gchar *default_ns, GHashTable *prefix_map);
+static void sp_repr_write_stream (SPRepr *repr, FILE *file, gint indent_level, gboolean add_whitespace);
+static void sp_repr_write_stream_element (SPRepr *repr, FILE *file, gint indent_level, gboolean add_whitespace);
 
 #ifdef HAVE_LIBWMF
 static xmlDocPtr sp_wmf_convert (const char * file_name);
@@ -121,7 +123,7 @@ sp_repr_do_read (xmlDocPtr doc, const gchar *default_ns)
     GSList *reprs=NULL;
     SPRepr *root=NULL;
 
-    for (node = xmlDocGetRootElement(doc); node != NULL; node = node->next) {
+    for ( node = doc->children ; node != NULL ; node = node->next ) {
         if (node->type == XML_ELEMENT_NODE) {
 	    SPRepr *repr=sp_repr_svg_read_node (node, default_ns, prefix_map);
 	    reprs = g_slist_append(reprs, repr);
@@ -281,6 +283,9 @@ sp_repr_save_stream (SPReprDoc *doc, FILE *fp)
           repr ; repr = sp_repr_next(repr) )
     {
         sp_repr_write_stream(repr, fp, 0, TRUE);
+	if ( repr->type == SP_XML_COMMENT_NODE ) {
+	    fputc('\n', fp);
+	}
     }
 }
 
@@ -344,8 +349,23 @@ repr_quote_write (FILE * file, const gchar * val)
 }
 
 void
-sp_repr_write_stream (SPRepr * repr, FILE * file, gint indent_level,
+sp_repr_write_stream (SPRepr *repr, FILE *file, gint indent_level,
                       gboolean add_whitespace)
+{
+    if (repr->type == SP_XML_TEXT_NODE) {
+        repr_quote_write (file, sp_repr_content (repr));
+    } else if (repr->type == SP_XML_COMMENT_NODE) {
+        fprintf (file, "<!--%s-->", sp_repr_content (repr));
+    } else if (repr->type == SP_XML_ELEMENT_NODE) {
+        sp_repr_write_stream_element (repr, file, indent_level, add_whitespace); 
+    } else {
+	g_assert_not_reached();
+    }
+}
+
+void
+sp_repr_write_stream_element (SPRepr * repr, FILE * file, gint indent_level,
+                              gboolean add_whitespace)
 {
     SPReprAttr *attr;
     SPRepr *child;
@@ -399,13 +419,7 @@ sp_repr_write_stream (SPRepr * repr, FILE * file, gint indent_level,
             fputs ("\n", file);
         }
         for (child = repr->children; child != NULL; child = child->next) {
-            if (child->type == SP_XML_TEXT_NODE) {
-                repr_quote_write (file, sp_repr_content (child));
-            } else if (child->type == SP_XML_COMMENT_NODE) {
-                fprintf (file, "<!--%s-->", sp_repr_content (child));
-            } else {
-                sp_repr_write_stream (child, file, (loose) ? (indent_level + 1) : 0, add_whitespace); 
-            }
+            sp_repr_write_stream (child, file, (loose) ? (indent_level + 1) : 0, add_whitespace); 
         }
         
         if (loose && add_whitespace) {
